--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   audioplayers:
+  google_sign_in: ^6.1.5
+  firebase_core:
   http:
+  firebase_auth: ^4.10.1
 
 dev_dependencies:
   flutter_test:
